# ProjectSnako

./: LICENSE  README.md  pyproject.toml
src/: feature-ticTacToe.py  main.py
