[tool.poetry]
name = "Snako"
version = "0.1.0"
description = "Discord bot made using python nextcord"
authors = ["winter_x64"]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.5.0"
firebase-admin = "^6.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
